# battleship

./: .gitignore  LICENSE  README.md
backend/: Cargo.toml
backend/src/: lib.rs  main.rs
backend/src/api/: errors.rs  handlers.rs  mod.rs  routes.rs  types.rs
backend/src/api/ws/: handler.rs  messages.rs
backend/src/app/: board_view.rs  fleet_view.rs  game_session.rs  mod.rs  session_manager.rs
backend/src/game/: ai.rs  board.rs  coord.rs  errors.rs  game_state.rs  mod.rs  player.rs  ship.rs
backend/tests/: api.rs  api_tests.rs  board_tests.rs  board_view_tests.rs  full_game_api_test.rs  game_session_tests.rs  player_tests.rs  random_fleet_test.rs
frontend/: README.md  eslint.config.js  package.json
frontend/src/lib/: config.ts  types.ts
frontend/src/lib/api/: client.ts  websocket.ts
frontend/src/lib/components/: Board.svelte  ConnectionStatus.svelte  DisconnectOverlay.svelte  Fleet.svelte  LeaveGame.svelte  Logo.svelte  RematchDialog.svelte
frontend/src/lib/components/game/: Board.svelte  Fleet.svelte  PlayerPanel.svelte
frontend/src/lib/components/notification/: Notification.svelte  NotificationStack.svelte
frontend/src/lib/components/phases/: FinishedPhase.svelte  OngoingPhase.svelte  PlacingShipsPhase.svelte
frontend/src/lib/game/: config.ts  utils.ts
frontend/src/lib/stores/: app.ts  game.ts  notification.ts
frontend/src/routes/: +layout.svelte  +page.svelte  layout.css
frontend/src/routes/game/[code]/: +page.svelte
